Update and rename _posts/2014-08-19-Big-Data.html to 2014-08-26-hello-world.html

--- a/2014-08-26-hello-world.html
+++ b/2014-08-26-hello-world.html
@@ -8,14 +8,14 @@
 # of the post in this file
 layout: post
 # title of your post
-title:  "Materials Science at Scale is Big Data"
+title:  "This is my post"
 # the author of the post's github user name
-author: tonyfast
+author: lizzyro
 # Data and time of the post
-date:   2014-08-19 11:10:22
+date:   2014-08-26 11:10:22
 
 # Optional fields
-categories:
+categories: 
 tags:
 ---
 
@@ -27,4 +27,13 @@ pages.
 
 ## Boiler plate post
 
-This is a boilerplate post for making Jekyll pages
+This is a boilerplate post for making Jekyll pages.
+
+### This is a subheading
+
+### This is another
+
+## Lets make an link
+
+
+[Lizzy's website](https://lizzyro.github.io)
